# APPMacroGold_2

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/engine/: scoring.py
backend/app/schemas/: market.py
backend/app/services/: data_provider.py  signal_engine.py
frontend/: Dockerfile  package.json
frontend/src/pages/: index.tsx
