[project]
name = "macro-gold-backend"
version = "0.1.0"
description = "Macro + Gold monitoring backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "celery>=5.4",
  "pandas>=2.2",
  "numpy>=2.0",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
